# graphene-sqlalchemy-auto

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
example/fastapi_app/: main.py
example/flask_app/: scheme.py
graphene_sqlalchemy_auto/: mutation.py  query.py
graphene_sqlalchemy_auto_filter/: query.py  types.py
