[tool.poetry]
name = "graphene-sqlalchemy-auto"
version = "0.7.0"
homepage = "https://github.com/goodking-bq/graphene-sqlalchemy-auto"
repository = "https://github.com/goodking-bq/graphene-sqlalchemy-auto.git"
documentation = "https://github.com/goodking-bq/graphene-sqlalchemy-auto"
packages = [
    { include = "graphene_sqlalchemy_auto" }
]
description = """generate default graphene schema from sqlalchemy model base on [graphene-sqlalchemy](https://github.com/graphql-python/graphene-sqlalchemy.git)
"""
readme = "README.md"
authors = ["golden <goodking_bq@hotmail.com>", "baddhizm <frenggy@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.6"
graphene-sqlalchemy = ">=2.3.0,<3"
graphene-sqlalchemy-filter = "1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
