[tool.poetry]
name = "graphene-sqlalchemy-auto-filter"
version = "1.0.0"
homepage = "https://github.com/Baddhizm/graphene-sqlalchemy-auto-filter"
repository = "https://github.com/Baddhizm/graphene-sqlalchemy-auto-filter.git"
documentation = "https://github.com/Baddhizm/graphene-sqlalchemy-auto-filter"
packages = [
    { include = "graphene_sqlalchemy_auto_filter" }
]
description = """generate default graphene schema from sqlalchemy model base on [graphene-sqlalchemy](https://github.com/graphql-python/graphene-sqlalchemy.git)
"""
readme = "README.md"
authors = ["golden <goodking_bq@hotmail.com>", "baddhizm <frenggy@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.6"
graphene-sqlalchemy = ">=2.3.0,<3"
graphene-sqlalchemy-filter = "1.12.1"
inflection = "0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
